feat: 무료 증정여부 입력 구현