@@ -2,6 +2,7 @@ package store.util;
 
 import java.util.Arrays;
 import java.util.List;
+import java.util.stream.Collectors;
 import store.domain.Order;
 import store.domain.Orders;
 import store.domain.Products;
@@ -11,7 +12,15 @@ import store.exception.StoreException;
 public class InputValidator {
     public static Orders getOrders(Products products, String input) {
         List<Order> orderList = generateOrderList(products, input);
-        return new Orders(orderList);
+        return new Orders(orderList, products);
+    }
+
+    public static String validateReply(String input) {
+        if (!input.equals("Y") && !input.equals("YES")) {
+            throw new StoreException(ErrorMessage.INVALID_OTHERS);
+        }
+
+        return input;
     }
 
     private static List<String> parseInput(String input) {
@@ -35,8 +44,7 @@ public class InputValidator {
                     List<String> parsedOrder = parseOrder(str);
                     validateParsedOrder(products, parsedOrder);
                     return new Order(parsedOrder.get(0), getNumber(parsedOrder.get(1)));
-                })
-                .toList();
+                }).collect(Collectors.toList());
     }
 
     private static List<String> parseOrder(String input) {
